src/objects/zqu__ProductRatePlanChargePriceSummary__c.object
<CustomObject>
    <description>The Price Summaries associated with a Product Rate Plan Charge (one for each currency activated).</description>
    <fields>
        <fullName>zqu__EntityID__c</fullName>
        <formula>zqu__ProductRatePlanCharge__r.zqu__EntityID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Entity ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__PriceSummary__c</fullName>
        <label>Price Summary</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>zqu__ProductRatePlanCharge__c</fullName>
        <label>Product Rate Plan Charge</label>
        <referenceTo>zqu__ProductRatePlanCharge__c</referenceTo>
        <relationshipLabel>Product Rate Plan Charge Price Summaries</relationshipLabel>
        <relationshipName>ProductRatePlanChargePriceSummaries</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>zqu__ZuoraId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>The Zuora Id (external primary key) concatenated with the 3-digit currency code for this price summary.</description>
        <externalId>true</externalId>
        <inlineHelpText>The Zuora Id (external primary key) concatenated with the 3-digit currency code for this price summary.</inlineHelpText>
        <label>Zuora Id</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Product Rate Plan Charge Price Summary</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>zqu__PriceSummary__c</columns>
        <columns>zqu__ProductRatePlanCharge__c</columns>
        <columns>zqu__ZuoraId__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Currency</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Rate Plan Charge Price Summaries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>